Sat Apr 17 00:48:17 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_queuerun (run_queue): Set debugging levels based on
 	'debug' config variables for each domain and list.

	* lib/Mj/Log.pm (set_level): New function: set logging level after
 	the fact.

	* lib/mj_cf_data.pl: Make 'debug' variable visible to the
 	interface so mj_queuerun can set the log level dynamically.

	* bin/mj_enqueue: Pass -v option value to mj_queueserv.

Fri Apr 16 18:25:38 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_post): Take an entity as a phantom extra
 	argument and always take the true file name.
	(post): Always pass the source file and pass the entity as an
 	extra argument.

	* lib/Majordomo.pm (help_start): Fix passing topic as the victim.

Wed Apr 14 02:32:12 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_enqueue: Take -P and -p arguments to specify domain and
 	list priorities.  Create queue files in appropriate priority
 	directories.

	* bin/mj_queuerun (run_queue): Two extra levels of nesting to
 	handle domain and list priorities.

Tue Apr 13 00:43:29 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_queueserv: More Solaris fixes.  Make sure exec'd
 	mj_queuerun has STDIN and STDOUT properly opened onto the $parent
 	filehandle.

	* bin/mj_enqueue: Fixes for Solaris: tear down and recreate socket
 	before every call to connect.

	* setup/setup_func.pl (suggest_mta): Pay attention to queue_mode
 	when creating qmail_default files.

	* postinstall: Add new queue scripts to the appropriate arrays.

	* Makefile.PL: Add new queue scripts to the appropriate arrays.

	* lib/Mj/MTAConfig.pm: Handle queue_mode by calling mj_enqueue
 	instead of mj_email.

	* setup/ask_queueing.pl (ask_queueing): New file; query for
 	timeout and concurrency.

	* setup/ask_basic.pl (ask_basic): Ask about queueing.

	* Makefile.PL: Bump config version.

	* lib/Majordomo.pm (_createlist): Pass 'queue_mode' on to